@@ -21,6 +21,68 @@ end_package
 
 begin_import
 import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|DefaultComboBoxModel
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|awt
+operator|.
+name|Component
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Paths
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -108,68 +170,6 @@ operator|.
 name|swing
 operator|.
 name|BindingBuilder
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|DefaultComboBoxModel
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|awt
-operator|.
-name|Component
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|nio
-operator|.
-name|file
-operator|.
-name|Paths
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|ArrayList
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collections
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
 import|;
 end_import
 
@@ -1212,6 +1212,24 @@ operator|.
 name|setClient
 argument_list|(
 literal|false
+argument_list|)
+expr_stmt|;
+name|cgenConfiguration
+operator|.
+name|setTemplate
+argument_list|(
+name|ClassGenerationAction
+operator|.
+name|SUBCLASS_TEMPLATE
+argument_list|)
+expr_stmt|;
+name|cgenConfiguration
+operator|.
+name|setSuperTemplate
+argument_list|(
+name|ClassGenerationAction
+operator|.
+name|SUPERCLASS_TEMPLATE
 argument_list|)
 expr_stmt|;
 block|}
